--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     }
     @keyframes h1ani{
         33%{
-            transform:scale(1);
+            transform:scale(.75);
         }
         67%{
-            transform:scale(1.5);
+            transform:scale(.5);
         }
         100%{
             transform:scale(1);
