--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <input type="text" id="ui" class="text-center block mx-auto bg-transparent border-b-2 border-green-300 border-solid"><br>
     <button class="bg-gradient-to-r from-purple-500 to-cyan-500 text-center p-3 text-black rounded-2xl hover:text-white block mx-auto" id="subbut">Submit</button>
     <br><br>
-    <div class="text-center bg-white text-blue-500">Description
+    <div class="text-center bg-white text-blue-500">Description :-
         <span id="prompt" class="p-3 font-bold"></span>
     </div>
     <br><br>
